--- a/.github/workflows/main_jcsecure0806.yml
+++ b/.github/workflows/main_jcsecure0806.yml
@@ -46,22 +46,13 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_766B15D5A370458A9477C89C7D8BAC03 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_C8E9D07ECFA24431AD5F292A493DA498 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_9D59BDF01E5144C082AB1177972FB195 }}
-
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
@@ -69,4 +60,4 @@ jobs:
           app-name: 'jcsecure0806'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E8EBF39C439246348877719F2D4921E6 }}
